--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,3 +1,9 @@
 FROM node:14.16.0
 
 WORKDIR /backend
+
+COPY backend/package.json .
+COPY backend/yarn.lock .
+RUN yarn install
+
+COPY ./backend .
