--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,3 +1,9 @@
 FROM node:14.16.0-alpine3.10
 
 WORKDIR /frontend
+
+COPY frontend/package.json .
+COPY frontend/yarn.lock .
+RUN yarn install
+
+COPY ./frontend .
