--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "dev": "webpack serve --host 0.0.0.0 --mode=development"
+    "dev": "webpack serve --host 0.0.0.0 --mode=development",
+    "build": "npx webpack --mode=development"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
