--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "@reduxjs/toolkit": "^1.5.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
+    "@types/uuid": "^8.3.0",
     "axios": "^0.21.1",
     "moment": "^2.29.1",
     "react-moment": "^1.1.1",
