--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/uuid": "^8.3.0",
     "axios": "^0.21.1",
+    "firebase": "^8.3.2",
     "moment": "^2.29.1",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.2",
