--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,16 +7,22 @@
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-typescript": "^7.13.0",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^13.1.1",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "@types/webpack": "^4.41.26",
     "@types/webpack-dev-server": "^3.11.2",
+    "babel-jest": "^26.6.3",
     "babel-plugin-react-css-modules": "^5.2.6",
     "css-loader": "^5.1.3",
     "file-loader": "^6.2.0",
+    "jest": "^26.6.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "style-loader": "^2.0.0",
+    "ts-jest": "^26.5.4",
     "ts-loader": "^8.0.18",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3",
@@ -27,7 +33,8 @@
   },
   "scripts": {
     "dev": "webpack serve --host 0.0.0.0 --mode=development",
-    "build": "npx webpack --mode=development"
+    "build": "npx webpack --mode=development",
+    "test": "jest --maxWorkers 4 --detectOpenHandles"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
